--- a/XMOTION/pom.xml
+++ b/XMOTION/pom.xml
@@ -17,7 +17,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>pns.start.Main</mainClass>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
